[package]
name = "lame"
version = "0.1.3"
authors = ["Charlie Somerville <charlie@charlie.bz>"]
description = "Rust bindings for libmp3lame"
license = "MIT"
repository = "https://github.com/charliesome/lame-rs"
homepage = "https://github.com/charliesome/lame-rs"

[dependencies]
lame-sys = { git = "https://github.com/naari3/lame-sys", rev = "ab971c1", features = ["bundled"] }
